<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mood Tracker</string>
    <string name="menu_stats">Statistics chart...</string>
    <string name="menu_history">History list...</string>
    <string name="menu_history_chart">History chart...</string>
    <string name="what_is_your_mood">How do you feel?</string>
    <string name="edit_message_hint">Add some description here</string>
    <string name="button_happy_descr">happy face</string>
    <string name="button_sad_descr">sad face</string>
    <string name="button_angry_descr">angry face</string>
    <string name="button_neutral_descr">sad face</string>
    <string name="last_update_label">Recent mood:</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_confirm_save">Record mood</string>
    <string name="button_stats_descr">Statistics</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Yes, save my mood!</string>
    <string name="confirm_save_text">You can add some description (e.g. reason or details) below.</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_statistics">Statistics Chart</string>
    <string name="title_activity_history_chart">History Chart</string>
    <string name="stats_welcome">Select how many weeks should be included</string>
    <string name="click_to_record">click emoticon to record your mood</string>
    <string name="link_history"><u>History</u></string>
    <string name="link_statistics"><u>Statistics</u></string>
    <string name="link_calendar"><u>Calendar</u></string>
    <string name="facebook">facebook</string>
    <string name="message_no_history_no_chart">No history. Cannot show chart :-(</string>
    <string name="apprater_title">Rate Mood Tracker</string>
    <string name="apprater_msg">Could you please rate Mood Tracker in Google Play? Thank you for any feedback or suggestions. It will help me to improve this application. </string>
    <string name="apprater_button_ok">Ok</string>
    <string name="apprater_button_later">Maybe later</string>
    <string name="apprater_button_no">No, thanks</string>

    <!-- FACEBOOK APP ID Mood Tracker-->
    <string name="fb_app_id">966695743344024"</string>
    <string name="no_network_connection">Sorry, no network connection</string>

</resources>